2006-01-12  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Bumped version to 2.1.19

2006-01-19  Joe Shaw  <joeshaw@novell.com>

	* mono/DataWrapper.custom: We need to manually create a decoding
	filtering stream and wrap that in a StreamWrapper rather than the
	DataWrapper's GMimeStream directly, which contains undecoded data.

	* mono/GMime.metadata: Rename some enum members, add DataWrapper's
	GMimeStream property and MimePart's ContentObject properties as
	items which return an owned ref.

2006-01-12  Jeffrey Stedfast  <fejj@novell.com>

	** made a release of 2.1.18 **

	* gmime/gmime-stream-mem.c (g_mime_stream_mem_get_byte_array): Use
	g_return_val_if_fail() rather than g_return_if_fail() since we
	need to return NULL on error.

2006-01-09  Joe Shaw  <joeshaw@novell.com>

	* mono/Message.custom: Add a References property.  Based on a
	patch from D Bera <dbera.web@gmail.com>

2006-01-05  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Require gtk-sharp 2.4.0.  Set the mono API version
	to <major>.<minor>.0.<interface>, which initially is set to
	2.1.0.0, so that version numbers are handled better with gmime
	upgrades (and hopefully RPM deps on most distros).  Bump version
	to 2.1.18.

	* README: Updated version

	* gmime/gmime-stream-mem.[ch]: Add a
	g_mime_stream_mem_get_byte_array() method for the mono bindings.

	* mono/DataWrapper.custom:
	* mono/Header.custom:
	* mono/Object.custom: Remove WriteToStream() and replace with a
	new Stream property which returns a wrapped gmime memory stream.

	* mono/GMime.metadata: A bunch of metadata fixes, mainly for
	64-bit compatibility.  gtk-sharp incorrectly maps off_t to size_t,
	which is an int; it's actually a long, so map it manually
	ourselves.

	* mono/ObjectStream.cs: Remove this; it's been replaced by
	StreamWrapper, which is much more memory efficient.

	* mono/Stream.custom: Seek() returns a long.  Remove the
	CopyToStream() and WriteToStream() methods, since streams can now